# SistemiOperativi

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  checkinclude.sh  stat.c
report/: main  main.c
src/: CMakeLists.txt  bool.h  dictionary.h  logger.c  logger.h  path_node.c  path_node.h  process.c  process.h  protocol.c  protocol.h  statistics.c  statistics.h  test_catch_main.cpp  tree.c  tree.h  utils.c  utils.h
src/analyzer/: CMakeLists.txt  analyzer.c  analyzer.h  analyzer_self.c  main.c  path.c  path.h
src/analyzer/counter/: CMakeLists.txt  counter.c  counter.h  counter_self.c  main.c  path.c  path.h
src/analyzer/p/: CMakeLists.txt  main.c  p.c  p.h  p_self.c
src/analyzer/q/: CMakeLists.txt  main.c  q.c  q.h  q_self.c
src/containers/: CMakeLists.txt  base.c  base.h  dictionary.c  dictionary.h  dictionary.test.cpp  list.c  list.h  set.c  set.h  tree.c  tree.h  tree.test.cpp
src/main/: CMakeLists.txt  main.c
src/report/: CMakeLists.txt  main  main.c  report.c  report.h
